strona2index.html

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 </head>
-<h1> Moja pierwsza strona -  Aleksander Kunach </h1>
+<body>
+	<a href="strona2.html">StronaKolumnowa</a>
+</body>
 </html>
