--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<a href="/strona2.html">StronaKolumnowa</a>
+	<a href="strona2.html">StronaKolumnowa</a>
 </body>
 </html>
