--- a/strona2Tabele.html
+++ b/strona2Tabele.html
@@ -20,6 +20,10 @@
 			<td colspan="4">tekst a3 </td>
 			</tr>
 			<tr>
+			<td colspan="3">obrazek1 </td>
+			<td colspan="3"> obrazek2</td>
+			<td colspan="3"> obrazek3</td>
+			<td colspan="3"> obrazek4</td>
 			</tr>
 		</tbody>
 	</table>
