--- a/strona2Tabele.html
+++ b/strona2Tabele.html
@@ -2,33 +2,56 @@
 <head>
 	<meta charset="UTF-8">
 	<style>
-td{
-border: 1px solid black;
-}
 </style>
 </head>
 <body>
-	<table>
+	<table  border=“1”>
 		<tbody>
 			<tr>
-			<td colspan="12"> tekst tabeli1 </td>
+			<td colspan="12"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </td>
 			</tr>
 			<tr>
-			<td colspan="3">teksta </td>
-			<td colspan="3">tekstb</td>
-			<td colspan="3">tekstc</td>
-			<td colspan="3">tekstd</td>
+			<td colspan="3">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). </td>
+			<td colspan="3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</td>
+			<td colspan="3">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</td>
+			<td colspan="3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</td>
 			</tr>
 			<tr>
-			<td colspan="4">tekst a1</td>
-			<td colspan="4">tekst a2</td>
-			<td colspan="4">tekst a3</td>
+			<td colspan="4">Shiba inu to średniej wielkości rasa psów o lekkim, energicznym ruchu. Dorosłe samce osiągnąć mogą do 39,5 cm wysokości w kłębie, z kolei samice do 36,5 cm (z granicą tolerancji do 1,5 cm w górę i dół). Pomimo dobrze rozwiniętych mięśni i kośćca, psy tej rasy ważą stosunkowo niewiele, maksymalnie dochodząc do granicy 13 kg (suki) i 14 kg (psy).
+
+Shiba odznacza się mocną, harmonijną budową o zrównoważonych proporcjach.  Grzbiet jest silny i prosty, klatka piersiowa głęboka, lędźwia szerokie i dobrze umięśnione. Ważny dla rasy jest w szczególności stosunek wysokości w kłębie do długości tułowia. Zgodnie z przyjętym standardem, powinien on wynosić 10:11. W odróżnieniu od reszty ciała, pokryty jest dłuższą sierścią.
+
+Shiby mają nieduże, lekko skośne, trójkątne oczy w kolorze ciemnobrązowym. Uszy są małe, stojące i nastawione do przodu. Podobnie jak oczy, przybierają kształt trójkąta. Wszystko to sprawia, że shiba inu wyróżnia się charakterystycznym, nieco „lisim” wyglądem.
+
+Gęste, pluszowe futro shiby składa się z dwóch warstw: obfitego, miękkiego podszerstka oraz prostego, twardego i szorstkiego włosa okrywowego. Główne kolory umaszczenia to rudy i sezamowy. Popularny jest również shiba inu czarny (podpalany). Akceptowalne są także barwy łączone. Ważnym elementem umaszczenia, niezależnie od odmiany, jest tzw. „urajiro” – czyli białe znaczenia występujące w okolicach kufy, na podbrzuszu i łapach. Przez wzorzec nie jest akceptowalny Shiba inu biały w całości.</td>
+			<td colspan="4">Shiba inu, nazywany również shiba, to pierwotna rasa psów pochodząca z Japonii. Jest to najmniejsza i najprawdopodobniej najstarsza rasa, jaka wywodzi się z Kraju Kwitnącej Wiśni. Nazwa „shiba inu” oznacza w dosłownym tłumaczeniu „mały pies” i odnosi się bezpośrednio do rozmiarów czworonogów tej rasy.
+
+Naturalnym środowiskiem życia dla shiby były pierwotnie górzyste rejony leżące nad brzegiem Morza Japońskiego. Psy wykorzystywano powszechnie do polowania na ptaki i niewielką zwierzynę. 
+
+Przez długie lata, głównie za sprawą odległego położenia i wyspiarskiego charakteru Japonii, shiba nie był krzyżowany z innymi rasami, co pozwoliło na zachowanie czystości linii. Jednakże, choć psy były do siebie bardzo zbliżone pod względem wyglądu, temperamentu i zachowania, nie były identyczne i między sobą nieznacznie się różniły – przede wszystkim z uwagi na zróżnicowane miejsce pochodzenia w obrębie wyspy, jak i brak systematycznej hodowli.
+
+Popularyzacja polowań jako formy sportu sprawiła, że na przełomie wieku XIX i XX shiba inu zaczął być krzyżowany z napływowymi rasami myśliwskimi – między innymi seterami angielskimi i pointerami. Praktyki te doprowadziły niemal do całkowitego wygaszenia czystej linii rodzimej rasy.
+
+W okolicach roku 1928 podjęto działania mające na celu odtworzenie liczebności pierwotnej rasy. Do życia powołano nawet specjalny program ochrony pozostałej, niewielkiej liczby osobników czystej krwi i rozpoczęto hodowlę. Jednolity wzorzec psów shiba inu utworzono w roku 1934. Od 1937 roku rasa uznawana jest w Japonii za „pomnik przyrody”.</td>
+			<td colspan="4">Shiba inu to pies o silnym charakterze – pewny siebie, odważny i niezależny. Choć jest inteligentny, niechętnie się podporządkowuje. W jego naturze nie leży również chęć przypodobania się człowiekowi. Pies shiba inu bez skrupułów wykorzysta pobłażliwość opiekuna i popełniane przez niego błędy w wychowaniu. To swego rodzaju indywidualista, który ma swoje zdanie i lubi czasem poprzebywać w odosobnieniu. Zwłaszcza w pierwszym kontakcie shiba może wydawać się zdystansowany – ale w rzeczywistości ma przyjazne usposobienie, a ponadto przywiązuje się do najbliższych sobie ludzi. Nie jest to jednak pies, który będzie nachalny w okazywaniu uczuć.
+
+Shiba inu to pies nie tylko niezależny, ale i terytorialny z mocno zakorzenionym instynktem łowieckim. Ma wyraźną tendencję do dominacji. Zgodnie ze standardem, nie powinien przejawiać ani zachowań bojaźliwych, ani też agresywnych. Wobec obcych pies rasy shiba pozostaje nieufny i czujny, i z uwagą obserwuje otoczenie. Choć takie zachowanie mocno predysponuje go do stróżowania, nie nadaje się do trzymania w odosobnieniu na dworze.
+
+Dobrze prowadzony shiba potrafi jednak okazać człowiekowi szacunek, oddanie i wykazać chęć współpracy. Potrzebuje jednak odpowiedniego opiekuna – pewnego siebie, a zarazem empatycznego, który stanie się w jego oczach przywódcą stada.
+
+Pies japoński shiba zwykle chętnie towarzyszy rodzinie we wszystkich aktywnościach – jest bowiem bardzo energiczny i ciekawski. O ile przeszedł właściwą socjalizację w hodowli, nie powinien sprawiać większego problemu w kontakcie z dziećmi i innymi psami.</td>
 			</tr>
 			<tr>
-			<td colspan="3">obrazek1 </td>
-			<td colspan="3">obrazek2</td>
-			<td colspan="3">obrazek3</td>
-			<td colspan="3">obrazek4</td>
+			<td colspan="3" style="width:400px"><img src="Siberian-husky.jpg" alt="Husky" style="width:100%"> </td>
+			<td colspan="3"><img src="Shiba-inu.jpg" alt="Shiba" style="width:100%"></td>
+			<td colspan="3"><img src="Rottweiler.jpg" alt="Rottweiler" style="width:100%"></td>
+			<td colspan="3"><img src="Samoyed.jpg" alt="Samoyed" style="width:100%"></td>
+			</tr>
+			<tr>
+			<td colspan="3" style="text-align: center;">Husky</td>
+			<td colspan="3" style="text-align: center">Shiba</td>
+			<td colspan="3" style="text-align: center;">Rottweiler</td>
+			<td colspan="3" style="text-align: center;">Samoyed</td>
 			</tr>
 		</tbody>
 	</table>
