--- a/strona2Tabele.html
+++ b/strona2Tabele.html
@@ -5,7 +5,7 @@
 </style>
 </head>
 <body>
-	<table  border=“1”>
+	<table  style="table-layout: fixed; width: 100%;">
 		<tbody>
 			<tr>
 			<td colspan="12"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </td>
@@ -42,7 +42,8 @@ Dobrze prowadzony shiba potrafi jednak okazać człowiekowi szacunek, oddanie i 
 Pies japoński shiba zwykle chętnie towarzyszy rodzinie we wszystkich aktywnościach – jest bowiem bardzo energiczny i ciekawski. O ile przeszedł właściwą socjalizację w hodowli, nie powinien sprawiać większego problemu w kontakcie z dziećmi i innymi psami.</td>
 			</tr>
 			<tr>
-			<td colspan="3" style="width:400px"><img src="Siberian-husky.jpg" alt="Husky" style="width:100%"> </td>
+			<td colspan="3" style="width:400px"><img src="Siberian-husky.jpg" alt="Husky" style="width:100%"></td>
+			
 			<td colspan="3"><img src="Shiba-inu.jpg" alt="Shiba" style="width:100%"></td>
 			<td colspan="3"><img src="Rottweiler.jpg" alt="Rottweiler" style="width:100%"></td>
 			<td colspan="3"><img src="Samoyed.jpg" alt="Samoyed" style="width:100%"></td>
