--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<a href="strona2Tabele.html">StronaKolumnowa</a>
+	<a href="strona2Tabele.html">StronaKolumnowa</a><p></p>
 	<a href="strona2Dane.html">StronaDane</a>
 </body>
 </html>
