--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 	<a href="strona2Tabele.html">StronaKolumnowa</a><p></p>
 	<a href="strona2Dane.html">StronaDane</a>
+	<a href="strona3Tabele.html">StronaDaneCSS</a>
 </body>
 </html>
