--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<a href="strona2Tabele.html">StronaKolumnowa</a><p></p>
-	<a href="strona2Dane.html">StronaDane</a>
+	<a href="strona2Dane.html">StronaDane</a><p></p>
 	<a href="strona3Tabele.html">StronaDaneCSS</a>
 </body>
 </html>
