--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 	<a href="strona2Tabele.html">StronaKolumnowa</a><p></p>
 	<a href="strona2Dane.html">StronaDane</a><p></p>
-	<a href="strona3Tabele.html">StronaDaneCSS</a><p></p>
+	<a href="strona3Tabele.html">StronaKolumnowaCSS</a><p></p>
 	<a href="strona3Dane.html">StronaDaneCSS</a>
 </body>
 </html>
