--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<a href="strona2Tabele.html">StronaKolumnowa</a><p></p>
 	<a href="strona2Dane.html">StronaDane</a><p></p>
 	<a href="strona3Tabele.html">StronaKolumnowaCSS</a><p></p>
-	<a href="strona3Dane.html">StronaDaneCSS</a>
+	<a href="strona3Dane.html">StronaDaneCSS</a><p></p>
+	<a href="kalkulator.html">StronaDaneCSS</a>
 </body>
 </html>
