--- a/kalkulator.html
+++ b/kalkulator.html
@@ -15,7 +15,7 @@
             height: 800px;
             width: 1000px;
             margin: 20px auto;
-            background-color: grey;
+            background-color: rgb(24, 23, 23);
         }
         .screen {
             width: 75%;
@@ -38,13 +38,13 @@
         .button {
             width: 22%;
             height: 100px;
-            border: 3px solid red;
+            border: 3px solid grey;
             font-size: 50px;
             text-align: center;
             line-height: 100px;
             border-radius: 10px;
             margin-top: 5px;
-            background-color: green;
+            background-color: grey;
         }
         .button button {
             width: 100%;
@@ -74,7 +74,7 @@
             <div class="button"><button onclick="addChar(3)">3</button></div>
             <div class="button"><button onclick="addChar('*')">*</button></div>
             <div class="button"><button onclick="addChar(0)">0</button></div> 
-            <div class="button"><button onclick="wyczysc()">C</button></div> 
+            <div style="background-color: rgb(137, 91, 6); border-radius: 10px; border:rgb(137, 91, 6) " class="button"><button onclick="wyczysc()">C</button></div> 
             <div class="button"><button onclick="oblicz()">=</button></div>
             <div class="button"><button onclick="addChar('-')">-</button></div>
         </div>      
