--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<a href="strona2Tabele.html">StronaKolumnowa</a><p></p>
-	<a href="strona2Dane.html">StronaDane</a><p></p>
-	<a href="strona3Tabele.html">StronaKolumnowaCSS</a><p></p>
-	<a href="strona3Dane.html">StronaDaneCSS</a><p></p>
-	<a href="kalkulator.html">StronaDaneCSS</a>
+	<h1> Strony Aleksander Kunach </h1> <br>
+	<a href="strona2Tabele.html">StronaKolumnowa</a><br>
+	<a href="strona2Dane.html">StronaDane</a><br>
+	<a href="strona3Tabele.html">StronaKolumnowaCSS</a><br>
+	<a href="strona3Dane.html">StronaDaneCSS</a><br>
+	<a href="kalkulator.html">Kalkulator przy użyciu JS</a><br>
 </body>
 </html>
