--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<a href="strona3Tabele.html">StronaKolumnowaCSS</a><br>
 	<a href="strona3Dane.html">StronaDaneCSS</a><br>
 	<a href="kalkulator.html">Kalkulator przy użyciu JS</a><br>
+	<a href="strona5DaneZWeryfikacja.html">Formularz z weryfikacją</a><br>
 </body>
 </html>
